[package]
name = "hyperlane-radix"
version = "1.0.0"
edition = "2021"

[dependencies]
scrypto = { version = "1.3.0" }
radix-common = { version = "1.3.0", features = [] }
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"] }
getrandom = { version = "0.2.5", features = [
    "custom",
] } # getrandom is used indirectly by k256, but for the wasm target we must select the custom feature

[dev-dependencies]
scrypto-test = { version = "1.3.0" }
hex = "0.4"

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace
